# d2f2

./: .gitignore  CHANGELOG.md  CONFIGURATIONS.py  README.md  requirements.txt  setup.cfg  setup.py
D2F2/: CONFIGURATIONS.py  __main__.py  convert.py  shell.py
DIRtoPDF/: CONFIGURATIONS.py  __main__.py  convert.py  shell.py
d2f2/: CONFIGURATIONS.py  __init__.py  __main__.py  convert.py  shell.py
