[metadata]
name = D2F2
version = 2.0.1
author = DomCie
author_email = dev@domcie.net
description = Tool to convert image folders into files
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/DomCie/D2F2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    PyMuPDF>=1.18

[options.entry_points]
console_scripts =
    D2F2 = D2F2:main